--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           clean: false
-          ref: gh_pages
+          ref: gh-pages
       - name: Overwrite file and commit
         run: |
           mv index.html.uncommitted index.html
