--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,1 @@
-build/
-*.ipr
-run/
-*.iws
-out/
-*.iml
-.gradle/
-output/
-bin/
-libs/
-
-.classpath
-.project
-.idea/
-classes/
-.metadata
-.vscode
-.settings
-*.launch
-
-venv
-
-.architectury-transformer
-*src/generated
-doc/out.html
+.ctt/
