--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
 .ctt/
+.nox/
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
