Parameterize a few more values and update the README instructions

--- a/copier.yml
+++ b/copier.yml
@@ -7,9 +7,11 @@ _answers_file: .copier-answers.hexdummy.yml
 
 modid:
   type: str
+  validator: "{% if not modid %}Value must not be blank{% endif %}"
 
 author:
   type: str
+  validator: "{% if not author %}Value must not be blank{% endif %}"
 
 classname:
   type: str
@@ -22,8 +24,11 @@ display_name:
 
 description:
   type: str
-  help: description
   default: "{{ display_name }} addon for Hex Casting"
+
+license:
+  type: str
+  default: MIT
 
 sources_url:
   type: str
@@ -32,6 +37,18 @@ sources_url:
 homepage_url:
   type: str
   default: "https://{{ author|lower }}.github.io/{{ modid }}"
+
+initial_mod_version:
+  type: str
+  default: "0.0.1"
+
+java_version:
+  type: int
+  default: 17
+
+hexcasting_version:
+  type: str
+  default: "0.10.3"
 
 package:
   type: str
@@ -42,15 +59,14 @@ capitalize_platforms:
   help: Capitalize platform directory names? (eg. Common vs common)
   default: false
 
-initial_version:
+mappings:
   type: str
-  default: "0.0.1"
+  choices:
+    Mojmap: 'loom.officialMojangMappings()'
+    Yarn: &mappings_default '"net.fabricmc:yarn:1.19.2+build.28:v2"'
+  default: *mappings_default
 
 # static/computed values
-
-hexcasting_version:
-  when: false
-  default: "0.10.3"
 
 common_path:
   when: false
